src/objects/VisitPlan__c.object
<CustomObject>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact</label>
        <referenceTo>AccountContact__c</referenceTo>
        <relationshipName>Visit_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Account_Contact__r.Contact__r.FirstName &amp; &quot; &quot; &amp;  Account_Contact__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipName>Visit_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hour_Block__c</fullName>
        <label>Hour Block</label>
        <picklist>
            <picklistValues>
                <fullName>8 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Visit_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanType__c</fullName>
        <label>PlanType</label>
        <picklist>
            <picklistValues>
                <fullName>Targeted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <label>Call Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VP-{000000}</displayFormat>
        <label>Call Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>